# pluto

./: .gitignore  .sops.yaml  CLAUDE.md  Cargo.toml  README.md  flake.nix  solana_copy_bot_requirements.md
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml
deploy/: README.md  pluto.service
deploy/nixos/: host.nix  module.nix
deploy/terraform/: README.md  main.tf
docs/: INSTRUCTIONS.md  spec.md
memory/: .gitignore  Cargo.toml  README.md
memory/dreaming/: cron.yaml
memory/memory_stores/codebase/: permissions.yaml
memory/memory_stores/org_knowledge/: README.md  permissions.yaml
memory/memory_stores/org_knowledge/runbooks/: p1-dispatch.md
memory/memory_stores/team_sre/: permissions.yaml
memory/scripts/: agent-session.sh  session-end-hook.sh  transcript-hook.sh
memory/src/: audit.rs  bootstrap.rs  dreaming.rs  hashing.rs  history.rs  lib.rs  paths.rs  permissions.rs  session.rs  store.rs
memory/tests/: memory_ops.rs  sre_scenario.rs
migrations/: 001_sessions.sql  002_session_mode.sql  003_observed_trades.sql  004_copy_decisions.sql  005_observed_trades_detection_delay.sql  006_paper_trades.sql  007_paper_trades_quote_nullable.sql  008_paper_trades_decision_nullable.sql  009_positions.sql  010_positions_peak_price.sql  011_paper_to_dry.sql  012_mint_blocklist.sql  013_latency_samples.sql  014_live_send_attempts.sql
secrets/: pluto.yaml
src/: app.rs  config.rs  lib.rs  main.rs
src/adapters/: executor.rs  jito.rs  mod.rs  signer.rs  tip.rs  tx.rs  tx_builder.rs
src/adapters/db/: copy_decisions.rs  dry_trades.rs  (+9 more)
src/domain/: copy_trading.rs  decision.rs  decoder.rs  dex_registry.rs  exit.rs  latency.rs  mod.rs  mode.rs  position.rs  quote.rs  report.rs  session.rs  slot_clock.rs  solana.rs  stream.rs  trade.rs
(+7 files in other folders)
