[package]
name = "pluto"
version = "0.1.0"
edition = "2024"

[dependencies]
yellowstone-grpc-client = "13.1.0"
yellowstone-grpc-proto  = "12.3.0"

tonic = { version = "0.14.6", default-features = false, features = [
    "channel",
    "tls-aws-lc",
    "tls-native-roots",
] }
prost = "0.14.3"

tokio        = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal", "net", "time", "sync"] }
tokio-stream = "0.1.17"
futures-util = { version = "0.3.32", default-features = false, features = ["std", "sink"] }

anyhow             = "1.0.102"
thiserror          = "2.0.18"
tracing            = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

base64  = "0.22.1"
bincode = "1.3"
bs58    = "0.5"
rand    = "0.8"

solana-sdk = "2"

mimalloc = { version = "0.1", default-features = false }

sqlx = { version = "0.8.6", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "time",
    "macros",
    "migrate",
] }
uuid = { version = "1", features = ["v7"] }
time = "0.3"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "http2"] }
serde_json = "1"

[profile.release]
lto             = "fat"
codegen-units   = 1
panic           = "abort"
overflow-checks = false
strip           = "symbols"
